[gd_scene load_steps=19 format=3 uid="uid://catqskupt3hsq"]

[ext_resource type="Script" uid="uid://ik18c16uig3n" path="res://scenes/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://b4iewucbynw6f" path="res://scenes/player.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bgy67wpl0sx32" path="res://scenes/mob.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://01078mpd8y40" path="res://scenes/floor.tscn" id="3_85g3d"]
[ext_resource type="Texture2D" uid="uid://01clt56ybknn" path="res://assets/1.png" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://jjnn5vrffs6d" path="res://scenes/hud.tscn" id="4_jyhfs"]
[ext_resource type="Texture2D" uid="uid://cjxdi2xhabppi" path="res://assets/2.png" id="4_tipki"]
[ext_resource type="Texture2D" uid="uid://eb6uj214e85w" path="res://assets/4.png" id="5_85g3d"]
[ext_resource type="PackedScene" uid="uid://5b1q6i7w2hm3" path="res://scenes/background_enemy.tscn" id="6_85g3d"]
[ext_resource type="FontFile" uid="uid://bmbhunr4tydfw" path="res://assets/Font/monogram.ttf" id="10_jbj1t"]
[ext_resource type="Texture2D" uid="uid://d1rthksmejify" path="res://assets/Keys/ARROWUP.png" id="11_muem4"]
[ext_resource type="Texture2D" uid="uid://bj2jr17rklreo" path="res://assets/Keys/W.png" id="12_dp3eg"]
[ext_resource type="Texture2D" uid="uid://kmudinr4c7l0" path="res://assets/Keys/ARROWLEFT.png" id="13_0ld40"]
[ext_resource type="Texture2D" uid="uid://dlklqicjlxsu6" path="res://assets/Keys/A.png" id="14_gqmmt"]
[ext_resource type="Texture2D" uid="uid://dy5nrlqbi2oyk" path="res://assets/Keys/ARROWRIGHT.png" id="15_yc10j"]
[ext_resource type="Texture2D" uid="uid://st0cwh16213j" path="res://assets/Keys/D.png" id="16_jscy8"]

[sub_resource type="Curve2D" id="Curve2D_85g3d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 71, 155, 0, 0, 0, 0, 540, 155, 0, 0, 0, 0, 540, 159, 0, 0, 0, 0, 71, 159, 0, 0, 0, 0, 71, 155)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_tipki"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 812, 216, 0, 0, 0, 0, 891, 216, 0, 0, 0, 0, 891, 277.373, 0, 0, 0, 0, 812, 277.373, 0, 0, 0, 0, 812, 216)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_0wfyh")
mob_scene = ExtResource("2_sugp2")

[node name="Floor" parent="." instance=ExtResource("3_85g3d")]
position = Vector2(0, 400)

[node name="BgLayer1" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 801.0
offset_bottom = 465.0
texture = ExtResource("3_o6xl0")

[node name="BgLayer2" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 801.0
offset_bottom = 465.0
texture = ExtResource("4_tipki")

[node name="BackgroundEnemy" parent="." instance=ExtResource("6_85g3d")]
position = Vector2(-40, 334)

[node name="BgLayer3" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 801.0
offset_bottom = 465.0
texture = ExtResource("5_85g3d")

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TrampTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="EnemySpawn" type="Marker2D" parent="."]
position = Vector2(840, 294)

[node name="CoinPath" type="Path2D" parent="."]
position = Vector2(0, 100)
curve = SubResource("Curve2D_85g3d")

[node name="CoinPathFollow" type="PathFollow2D" parent="CoinPath"]
unique_name_in_owner = true
position = Vector2(71, 155)

[node name="Player" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(40, 320)
scale = Vector2(3.5, 3.5)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(0, 50)
scale = Vector2(1, 1.15686)
curve = SubResource("Curve2D_tipki")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(812, 216)

[node name="HUD" parent="." instance=ExtResource("4_jyhfs")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -140.0
offset_right = 138.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_jbj1t")
theme_override_font_sizes/font_size = 30
text = "Saltar:"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("11_muem4")
expand_mode = 1

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_jbj1t")
theme_override_font_sizes/font_size = 30
text = "/"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("12_dp3eg")
expand_mode = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -368.5
offset_top = -81.0
offset_right = 368.5
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_jbj1t")
theme_override_font_sizes/font_size = 30
text = "Mover a la izquierda:"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("13_0ld40")
expand_mode = 1

[node name="Label3" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_jbj1t")
theme_override_font_sizes/font_size = 30
text = "/"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("14_gqmmt")
expand_mode = 1

[node name="Label2" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_jbj1t")
theme_override_font_sizes/font_size = 30
text = "     Mover a la derecha:"

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("15_yc10j")
expand_mode = 1

[node name="Label4" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_jbj1t")
theme_override_font_sizes/font_size = 30
text = "/"

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("16_jscy8")
expand_mode = 1

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="TrampTimer" to="." method="_on_tramp_timer_timeout"]
